--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="loading-text">Loading...</div>
 
 <div id="portfolio" style="display:none;">
-  <h1 id = "first" style= "color: purple;";> WELCOME TO UKP'S WEBSITE</h1>
+  <h1 id = "first" style= "color: white;";> WELCOME TO UKP'S WEBSITE</h1>
 </div>
    <div class="pfp-container">
-    <img src="e93057523d2ee96de4d5b03282deb9aa.jpg" alt="Profile Picture" class="pfp">
+    <img src="HD-wallpaper-full-black-screen-stars.jpg" alt="Profile Picture" class="pfp">
    </div>
 </body>
 
