--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="portfolio" style="display:none;">
   <h1 id = "first" style= "color: white;";> WELCOME TO UKP <br> studious WEBSITE</h1>
-  <h2 id="policy" style= "colour: red;";> "Hey sir" bot <br> privacy policy:<br> • hey sir is a bot created by ukp studious for people to enjoy and have fun on discord.<br> • please don't take this bot seriously . <br> • this bot is still in development process <br> • All rights are reserved by Ukp studious.  </h2> 
+  <h2 id="policy" style= "colour: white;";> "Hey sir" bot <br> privacy policy:<br> • hey sir is a bot created by ukp studious for people to enjoy and have fun on discord.<br> • please don't take this bot seriously . <br> • this bot is still in development process <br> • All rights are reserved by Ukp studious.  </h2> 
 </div>
    <div class="pfp-container">
     <img src="default-avatar-profile-icon-vector-600nw-1745180411.jpg" alt="Profile Picture" class="pfp">
